--- a/content/resources/01hw1.md
+++ b/content/resources/01hw1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/a1fb0de9aae3db7cf22e5898b1c43bfb_01hw1.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/a1fb0de9aae3db7cf22e5898b1c43bfb_01hw1.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 01hw1.pdf
 uid: a1fb0de9-aae3-db7c-f22e-5898b1c43bfb
