--- a/content/resources/04p1_8.md
+++ b/content/resources/04p1_8.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/3029cde724612e58b008ae2b85be2121_04p1_8.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/3029cde724612e58b008ae2b85be2121_04p1_8.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 04p1_8.pdf
 uid: 3029cde7-2461-2e58-b008-ae2b85be2121
