--- a/content/resources/08p11_2.md
+++ b/content/resources/08p11_2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/1ce4b0af0ac408e785f25aa92adf1830_08p11_2.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/1ce4b0af0ac408e785f25aa92adf1830_08p11_2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 08p11_2.pdf
 uid: 1ce4b0af-0ac4-08e7-85f2-5aa92adf1830
