--- a/content/resources/09_eq.md
+++ b/content/resources/09_eq.md
@@ -3,8 +3,13 @@ content_type: resource
 description: This file gives the inforamtion about the equilibrium equtions, stating
   that in the absence of acceleration all of the forces acting on a body (or a piece
   of it) must balance.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/f2c6aeed29c31d2e3b1a8c6d038c8590_09_eq.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/f2c6aeed29c31d2e3b1a8c6d038c8590_09_eq.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: 09_eq.pdf
 uid: f2c6aeed-29c3-1d2e-3b1a-8c6d038c8590
