--- a/content/resources/10p2_7.md
+++ b/content/resources/10p2_7.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/e9f001368980ceafce80b406ae1c19ae_10p2_7.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/e9f001368980ceafce80b406ae1c19ae_10p2_7.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 10p2_7.pdf
 uid: e9f00136-8980-ceaf-ce80-b406ae1c19ae
