--- a/content/resources/11p6_8_9.md
+++ b/content/resources/11p6_8_9.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/a1fb4044529ee5c37ade8d91e5fb18b0_11p6_8_9.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/a1fb4044529ee5c37ade8d91e5fb18b0_11p6_8_9.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 11p6_8_9.pdf
 uid: a1fb4044-529e-e5c3-7ade-8d91e5fb18b0
