--- a/content/resources/12p19_1_2.md
+++ b/content/resources/12p19_1_2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/3ce15b7fe960fdfc0429aea1913650c5_12p19_1_2.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/3ce15b7fe960fdfc0429aea1913650c5_12p19_1_2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 12p19_1_2.pdf
 uid: 3ce15b7f-e960-fdfc-0429-aea1913650c5
