--- a/content/resources/17p19_6_8.md
+++ b/content/resources/17p19_6_8.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/8aa538916741fad4e9101bf5c79ce206_17p19_6_8.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/8aa538916741fad4e9101bf5c79ce206_17p19_6_8.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 17p19_6_8.pdf
 uid: 8aa53891-6741-fad4-e910-1bf5c79ce206
