--- a/content/resources/19p19_17_18.md
+++ b/content/resources/19p19_17_18.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/976b7a7a41deeb41fdf3b66d56600821_19p19_17_18.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/976b7a7a41deeb41fdf3b66d56600821_19p19_17_18.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 19p19_17_18.pdf
 uid: 976b7a7a-41de-eb41-fdf3-b66d56600821
