--- a/content/resources/21_dn.md
+++ b/content/resources/21_dn.md
@@ -3,8 +3,13 @@ content_type: resource
 description: This file contains information about theoretical yield strength, eEdge,
   screw, and mixed dislocations, dislocation-controlled yield, strain energy in dislocations,
   dislocation motion and hardening, and kinetics of creep in crystalline materials.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/dd1eb1e4a4f711f006fb6db74900e3e9_21_dn.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/dd1eb1e4a4f711f006fb6db74900e3e9_21_dn.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: 21_dn.pdf
 uid: dd1eb1e4-a4f7-11f0-06fb-6db74900e3e9
