--- a/content/resources/22p19_20.md
+++ b/content/resources/22p19_20.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/eb3c2e3dc4a4a407c81e6b83199574ca_22p19_20.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/eb3c2e3dc4a4a407c81e6b83199574ca_22p19_20.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 22p19_20.pdf
 uid: eb3c2e3d-c4a4-a407-c81e-6b83199574ca
