--- a/content/resources/24p19_21_22.md
+++ b/content/resources/24p19_21_22.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/f1e625503af41915886c9b51300b2b24_24p19_21_22.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/f1e625503af41915886c9b51300b2b24_24p19_21_22.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 24p19_21_22.pdf
 uid: f1e62550-3af4-1915-886c-9b51300b2b24
