--- a/content/resources/25p3_1_2.md
+++ b/content/resources/25p3_1_2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/4c9b4d8ccaced47ed37610e8eba2c953_25p3_1_2.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/4c9b4d8ccaced47ed37610e8eba2c953_25p3_1_2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 25p3_1_2.pdf
 uid: 4c9b4d8c-cace-d47e-d376-10e8eba2c953
