--- a/content/resources/26p3_3.md
+++ b/content/resources/26p3_3.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/7f2adc25a1931b85ac7f66c272d8fc69_26p3_3.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/7f2adc25a1931b85ac7f66c272d8fc69_26p3_3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 26p3_3.pdf
 uid: 7f2adc25-a193-1b85-ac7f-66c272d8fc69
