--- a/content/resources/29p15_1_2.md
+++ b/content/resources/29p15_1_2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/1585a05f641123fe50f99d6711807826_29p15_1_2.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/1585a05f641123fe50f99d6711807826_29p15_1_2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 29p15_1_2.pdf
 uid: 1585a05f-6411-23fe-50f9-9d6711807826
