--- a/content/resources/3-91s07-th.md
+++ b/content/resources/3-91s07-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/b0152c480954e54e2954c3c33cb70fdb_3-91s07-th.jpg
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/b0152c480954e54e2954c3c33cb70fdb_3-91s07-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Fiber reinforced polymer (FRP) composite technology is recommended by the
@@ -9,6 +9,8 @@ image_metadata:
     systems, laminates and repairs to highway bridges. (Image courtesy of [U.S. FHWA](http://www.fhwa.dot.gov/).)
   credit: ''
   image-alt: Model of a cable-stayed bridge.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 3-91s07-th.jpg
 uid: b0152c48-0954-e54e-2954-c3c33cb70fdb
