--- a/content/resources/3-91s07.md
+++ b/content/resources/3-91s07.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Fiber reinforced polymer (FRP) composite technology is recommended by
   the U.S. Federal Highway Administration for reinforcing elements, cable and tendon
   systems, laminates and repairs to highway bridges. (Courtesy of U.S. FHWA.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/69d0480d7c668033a640a539fa9a2592_3-91s07.jpg
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/69d0480d7c668033a640a539fa9a2592_3-91s07.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Fiber reinforced polymer (FRP) composite technology is recommended by the
@@ -11,6 +11,8 @@ image_metadata:
     systems, laminates and repairs to highway bridges. (Image courtesy of [U.S. FHWA](http://www.fhwa.dot.gov/).)
   credit: ''
   image-alt: Model of a cable-stayed bridge.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 3-91s07.jpg
 uid: 69d0480d-7c66-8033-a640-a539fa9a2592
