--- a/content/resources/30p15_5.md
+++ b/content/resources/30p15_5.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/2a7e57b2a1c8c60c39e25388d615e4e7_30p15_5.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/2a7e57b2a1c8c60c39e25388d615e4e7_30p15_5.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 30p15_5.pdf
 uid: 2a7e57b2-a1c8-c60c-39e2-5388d615e4e7
