--- a/content/resources/32p4_8.md
+++ b/content/resources/32p4_8.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/3-91-mechanical-behavior-of-plastics-spring-2007/feb6aca4ce5d29280f5a47445d453b44_32p4_8.pdf
+file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/feb6aca4ce5d29280f5a47445d453b44_32p4_8.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 32p4_8.pdf
 uid: feb6aca4-ce5d-2928-0f5a-47445d453b44
