Sync all content

--- a/content/resources/01hw1.md
+++ b/content/resources/01hw1.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 01hw1.pdf
 uid: a1fb0de9-aae3-db7c-f22e-5898b1c43bfb
