--- a/content/resources/09_eq.md
+++ b/content/resources/09_eq.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: 106c3e7c-a318-1592-5947-71c83f813f89
 resourcetype: Document
 title: 09_eq.pdf
 uid: f2c6aeed-29c3-1d2e-3b1a-8c6d038c8590
