--- a/content/resources/12p19_1_2.md
+++ b/content/resources/12p19_1_2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 12p19_1_2.pdf
 uid: 3ce15b7f-e960-fdfc-0429-aea1913650c5
