--- a/content/resources/19p19_17_18.md
+++ b/content/resources/19p19_17_18.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 19p19_17_18.pdf
 uid: 976b7a7a-41de-eb41-fdf3-b66d56600821
