--- a/content/resources/21_dn.md
+++ b/content/resources/21_dn.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: 106c3e7c-a318-1592-5947-71c83f813f89
 resourcetype: Document
 title: 21_dn.pdf
 uid: dd1eb1e4-a4f7-11f0-06fb-6db74900e3e9
