--- a/content/resources/22p19_20.md
+++ b/content/resources/22p19_20.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 22p19_20.pdf
 uid: eb3c2e3d-c4a4-a407-c81e-6b83199574ca
