--- a/content/resources/04p1_8.md
+++ b/content/resources/04p1_8.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 04p1_8.pdf
 uid: 3029cde7-2461-2e58-b008-ae2b85be2121
