--- a/content/resources/06_pv.md
+++ b/content/resources/06_pv.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: 106c3e7c-a318-1592-5947-71c83f813f89
 resourcetype: Document
 title: 06_pv.pdf
 uid: 0be49aef-0263-a946-01f1-8b28c64af705
