--- a/content/resources/07p10_6.md
+++ b/content/resources/07p10_6.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 07p10_6.pdf
 uid: 51c0d8fe-0993-c227-2f37-c5958e348bf0
