--- a/content/resources/08p11_2.md
+++ b/content/resources/08p11_2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 08p11_2.pdf
 uid: 1ce4b0af-0ac4-08e7-85f2-5aa92adf1830
