--- a/content/resources/10p2_7.md
+++ b/content/resources/10p2_7.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 10p2_7.pdf
 uid: e9f00136-8980-ceaf-ce80-b406ae1c19ae
