--- a/content/resources/11p6_8_9.md
+++ b/content/resources/11p6_8_9.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 11p6_8_9.pdf
 uid: a1fb4044-529e-e5c3-7ade-8d91e5fb18b0
