--- a/content/resources/15p19_4.md
+++ b/content/resources/15p19_4.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 15p19_4.pdf
 uid: a241cb4f-e3fc-eebe-c9de-f8e321c928c0
