--- a/content/resources/17p19_6_8.md
+++ b/content/resources/17p19_6_8.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 17p19_6_8.pdf
 uid: 8aa53891-6741-fad4-e910-1bf5c79ce206
