--- a/content/resources/18p19_11.md
+++ b/content/resources/18p19_11.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 18p19_11.pdf
 uid: e07ee427-f804-9d3e-1371-28d028ee06b1
