--- a/content/resources/20p19_19.md
+++ b/content/resources/20p19_19.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 20p19_19.pdf
 uid: d3a17fdb-cefb-6bf5-2751-d0441cd08dde
