--- a/content/resources/24p19_21_22.md
+++ b/content/resources/24p19_21_22.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 24p19_21_22.pdf
 uid: f1e62550-3af4-1915-886c-9b51300b2b24
