--- a/content/resources/25p3_1_2.md
+++ b/content/resources/25p3_1_2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 25p3_1_2.pdf
 uid: 4c9b4d8c-cace-d47e-d376-10e8eba2c953
