--- a/content/resources/26p3_3.md
+++ b/content/resources/26p3_3.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 26p3_3.pdf
 uid: 7f2adc25-a193-1b85-ac7f-66c272d8fc69
