--- a/content/resources/29p15_1_2.md
+++ b/content/resources/29p15_1_2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 29p15_1_2.pdf
 uid: 1585a05f-6411-23fe-50f9-9d6711807826
