--- a/content/resources/30p15_5.md
+++ b/content/resources/30p15_5.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 30p15_5.pdf
 uid: 2a7e57b2-a1c8-c60c-39e2-5388d615e4e7
