--- a/content/resources/32p4_8.md
+++ b/content/resources/32p4_8.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 32p4_8.pdf
 uid: feb6aca4-ce5d-2928-0f5a-47445d453b44
