--- a/content/resources/35p20_10.md
+++ b/content/resources/35p20_10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 35p20_10.pdf
 uid: 022db5bd-41c2-6761-5737-d71c3e28e7ca
