Sync all content

--- a/content/resources/3-91s07-th.md
+++ b/content/resources/3-91s07-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/b0152c480954e54e2954c3c33cb70fdb_3-91s07-th.jpg
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/b0152c480954e54e2954c3c33cb70fdb_3-91s07-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Fiber reinforced polymer (FRP) composite technology is recommended by the
@@ -14,4 +14,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 3-91s07-th.jpg
 uid: b0152c48-0954-e54e-2954-c3c33cb70fdb
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+New image Upload
+
