--- a/content/resources/08p11_2.md
+++ b/content/resources/08p11_2.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/1ce4b0af0ac408e785f25aa92adf1830_08p11_2.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/1ce4b0af0ac408e785f25aa92adf1830_08p11_2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 08p11_2.pdf
 uid: 1ce4b0af-0ac4-08e7-85f2-5aa92adf1830
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
