--- a/content/resources/10p2_7.md
+++ b/content/resources/10p2_7.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/e9f001368980ceafce80b406ae1c19ae_10p2_7.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/e9f001368980ceafce80b406ae1c19ae_10p2_7.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 10p2_7.pdf
 uid: e9f00136-8980-ceaf-ce80-b406ae1c19ae
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
