--- a/content/resources/11p6_8_9.md
+++ b/content/resources/11p6_8_9.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/a1fb4044529ee5c37ade8d91e5fb18b0_11p6_8_9.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/a1fb4044529ee5c37ade8d91e5fb18b0_11p6_8_9.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 11p6_8_9.pdf
 uid: a1fb4044-529e-e5c3-7ade-8d91e5fb18b0
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
