--- a/content/resources/17p19_6_8.md
+++ b/content/resources/17p19_6_8.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/8aa538916741fad4e9101bf5c79ce206_17p19_6_8.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/8aa538916741fad4e9101bf5c79ce206_17p19_6_8.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 17p19_6_8.pdf
 uid: 8aa53891-6741-fad4-e910-1bf5c79ce206
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
