--- a/content/resources/18p19_11.md
+++ b/content/resources/18p19_11.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/e07ee427f8049d3e137128d028ee06b1_18p19_11.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/e07ee427f8049d3e137128d028ee06b1_18p19_11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 18p19_11.pdf
 uid: e07ee427-f804-9d3e-1371-28d028ee06b1
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
