--- a/content/resources/19p19_17_18.md
+++ b/content/resources/19p19_17_18.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/976b7a7a41deeb41fdf3b66d56600821_19p19_17_18.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/976b7a7a41deeb41fdf3b66d56600821_19p19_17_18.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 19p19_17_18.pdf
 uid: 976b7a7a-41de-eb41-fdf3-b66d56600821
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
