--- a/content/resources/22p19_20.md
+++ b/content/resources/22p19_20.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/eb3c2e3dc4a4a407c81e6b83199574ca_22p19_20.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/eb3c2e3dc4a4a407c81e6b83199574ca_22p19_20.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 22p19_20.pdf
 uid: eb3c2e3d-c4a4-a407-c81e-6b83199574ca
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
