--- a/content/resources/26p3_3.md
+++ b/content/resources/26p3_3.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/7f2adc25a1931b85ac7f66c272d8fc69_26p3_3.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/7f2adc25a1931b85ac7f66c272d8fc69_26p3_3.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 26p3_3.pdf
 uid: 7f2adc25-a193-1b85-ac7f-66c272d8fc69
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
