--- a/content/resources/29p15_1_2.md
+++ b/content/resources/29p15_1_2.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/1585a05f641123fe50f99d6711807826_29p15_1_2.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/1585a05f641123fe50f99d6711807826_29p15_1_2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 29p15_1_2.pdf
 uid: 1585a05f-6411-23fe-50f9-9d6711807826
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
