--- a/content/resources/32p4_8.md
+++ b/content/resources/32p4_8.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Homework assignment.
-file: /media/courses/3-91-mechanical-behavior-of-plastics-spring-2007/feb6aca4ce5d29280f5a47445d453b44_32p4_8.pdf
+file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/feb6aca4ce5d29280f5a47445d453b44_32p4_8.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 3845ca77-deb4-0285-6930-1dfc6989ad52
 resourcetype: Document
 title: 32p4_8.pdf
 uid: feb6aca4-ce5d-2928-0f5a-47445d453b44
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Homework assignment.
+
