Sync all content

--- a/content/resources/21_dn.md
+++ b/content/resources/21_dn.md
@@ -7,6 +7,7 @@ file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/dd1eb1e4a4f711f0
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -20,4 +21,3 @@ video_metadata:
   youtube_id: null
 ---
 This file contains information about theoretical yield strength, eEdge, screw, and mixed dislocations, dislocation-controlled yield, strain energy in dislocations, dislocation motion and hardening, and kinetics of creep in crystalline materials.
-
