--- a/content/resources/3-91s07.md
+++ b/content/resources/3-91s07.md
@@ -12,6 +12,7 @@ image_metadata:
   credit: ''
   image-alt: Model of a cable-stayed bridge.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 3-91s07.jpg
@@ -22,4 +23,3 @@ video_metadata:
   youtube_id: null
 ---
 Fiber reinforced polymer (FRP) composite technology is recommended by the U.S. Federal Highway Administration for reinforcing elements, cable and tendon systems, laminates and repairs to highway bridges. (Courtesy of U.S. FHWA.)
-
