--- a/content/resources/06_pv.md
+++ b/content/resources/06_pv.md
@@ -6,6 +6,7 @@ file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/0be49aef0263a946
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -19,4 +20,3 @@ video_metadata:
   youtube_id: null
 ---
 This file contains information about mechanics of materials, stresses, and  deformation: the poisson e?ect.
-
