--- a/content/resources/24p19_21_22.md
+++ b/content/resources/24p19_21_22.md
@@ -5,6 +5,7 @@ file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/f1e625503af41915
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -18,4 +19,3 @@ video_metadata:
   youtube_id: null
 ---
 Homework assignment.
-
