Sync all content

--- a/content/resources/15p19_4.md
+++ b/content/resources/15p19_4.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/a241cb4fe3fceebec9def8e321c928c0_15p19_4.pdf
+file_size: 19745
 file_type: application/pdf
 learning_resource_types:
 - Assignments
