--- a/content/resources/18p19_11.md
+++ b/content/resources/18p19_11.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/e07ee427f8049d3e137128d028ee06b1_18p19_11.pdf
+file_size: 44553
 file_type: application/pdf
 learning_resource_types:
 - Assignments
