--- a/content/resources/26p3_3.md
+++ b/content/resources/26p3_3.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/7f2adc25a1931b85ac7f66c272d8fc69_26p3_3.pdf
+file_size: 26638
 file_type: application/pdf
 learning_resource_types:
 - Assignments
