--- a/content/resources/3-91s07-th.md
+++ b/content/resources/3-91s07-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/b0152c480954e54e2954c3c33cb70fdb_3-91s07-th.jpg
+file_size: 5750
 file_type: image/jpeg
 image_metadata:
   caption: Fiber reinforced polymer (FRP) composite technology is recommended by the
