--- a/content/resources/32p4_8.md
+++ b/content/resources/32p4_8.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/feb6aca4ce5d29280f5a47445d453b44_32p4_8.pdf
+file_size: 26138
 file_type: application/pdf
 learning_resource_types:
 - Assignments
