--- a/content/resources/35p20_10.md
+++ b/content/resources/35p20_10.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/022db5bd41c267615737d71c3e28e7ca_35p20_10.pdf
+file_size: 19768
 file_type: application/pdf
 learning_resource_types:
 - Assignments
