--- a/content/resources/10p2_7.md
+++ b/content/resources/10p2_7.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/e9f001368980ceafce80b406ae1c19ae_10p2_7.pdf
+file_size: 34083
 file_type: application/pdf
 learning_resource_types:
 - Assignments
