--- a/content/resources/20p19_19.md
+++ b/content/resources/20p19_19.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/d3a17fdbcefb6bf52751d0441cd08dde_20p19_19.pdf
+file_size: 46681
 file_type: application/pdf
 learning_resource_types:
 - Assignments
