--- a/content/resources/29p15_1_2.md
+++ b/content/resources/29p15_1_2.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Homework assignment.
 file: /courses/3-91-mechanical-behavior-of-plastics-spring-2007/1585a05f641123fe50f99d6711807826_29p15_1_2.pdf
+file_size: 65369
 file_type: application/pdf
 learning_resource_types:
 - Assignments
