Sync all content

--- a/content/resources/3-91s07-th.md
+++ b/content/resources/3-91s07-th.md
@@ -7,7 +7,8 @@ file_type: image/jpeg
 image_metadata:
   caption: Fiber reinforced polymer (FRP) composite technology is recommended by the
     U.S. Federal Highway Administration for reinforcing elements, cable and tendon
-    systems, laminates and repairs to highway bridges. (Image courtesy of [U.S. FHWA](http://www.fhwa.dot.gov/).)
+    systems, laminates and repairs to highway bridges. (Image courtesy of {{% resource_link
+    "ca8dc3f0-3188-4381-857e-eac8f19ca06c" "U.S. FHWA" %}}.)
   credit: ''
   image-alt: Model of a cable-stayed bridge.
 learning_resource_types: []
